# real-time-machine-learning

./: .gitignore  Makefile  README.md  add_new_model.sh  logo.fig  main.cc
common/: Makefile  etl_test.cpp  test.cpp
common/include/: data_handler.hpp  data_point.hpp  data_set.hpp
common/src/: data_handler.cpp  data_point.cpp  data_set.cpp
dataset/: dataset_download_link.url  dataset_download_link.webloc
include/: common.hpp  data.hpp  data_handler.hpp
kmeans/: Makefile
kmeans/include/: kmeans.hpp
kmeans/src/: kmeans.cc
knn/: Makefile
knn/include/: knn.hpp
knn/src/: knn.cc
models/ann/: Makefile  test.cpp
models/ann/include/: layer.hpp  network.hpp  neural_network.hpp  neuron.hpp
models/ann/src/: layer.cpp  neural_network.cpp  neuron.cpp
models/kmeans/: CMakeLists.txt  Makefile  cluster.cpp  cluster.hpp  kmeans.cpp  kmeans.hpp  test.cpp
models/kmeans/include/: cluster.hpp  kmeans.hpp
models/kmeans/src/: cluster.cpp  kmeans.cpp
models/knn/: Makefile  knn_test.cpp  test.cpp
models/knn/include/: knn.hpp
models/knn/src/: knn.cpp
models/neural_network/: Makefile
models/neural_network/include/: neuron.hpp
models/neural_network/src/: network.cc  neuron.cc
neural_network/include/: layer.hpp  network.hpp
neural_network/src/: layer.cc
src/: common.cc  data.cc  data_handler.cc
